# TCD

./: .Rhistory  CMakeLists.txt  Connection.cpp  Connection.h  Label.cpp  Label.h  Leg.cpp  Leg.h  Service.cpp  Service.h  Station.cpp  Station.h  Stop.cpp  Stop.h  StopEvent.cpp  StopEvent.h  Temporary_Label.cpp  Temporary_Label.h  Transfer.cpp  Transfer.h  Trip.cpp  Trip.h  main.cpp  main.h  queries.txt  solutions.txt  stops.txt  transitiveTransfers.txt
